--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,14 @@ name: Deploy Vue.js App to GitHub Pages
 on:
   push:
     branches:
-      - main  # Change this to your default branch if it's different
+      - main  # This is your main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write  # Ensure the action has permission to write
 
     steps:
     - name: Checkout code
@@ -27,5 +30,5 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        github_token: ${{ secrets.GITHUB_TOKEN }}  # Use the default GITHUB_TOKEN
+        publish_dir: ./dist  # Directory where the build artifacts are
